Upgrade to Java 11 and Gradle 4.10