@@ -36,7 +36,7 @@ ext.vzomeArgs = [  // a list, not a map
 mainClassName = 'org.vorthmann.zome.ui.ApplicationUI'
 // used by the 'application' Gradle plugin
 run.args( vzomeArgs )
-applicationDefaultJvmArgs = [ '-Xmx3072M', '-Dfile.encoding=UTF8' ]
+applicationDefaultJvmArgs = [ '-Xmx3072M', '-Dfile.encoding=UTF8', ] // '--illegal-access=warn' ]
 jvmArgs.each { entry ->
     applicationDefaultJvmArgs << "-D$entry.key=$entry.value"
 }
